# data-pipeline

./: .env.example  .gitignore  README.md  architecture.md  dagster.yaml  pyproject.toml  run.sh  test.py
stock_pipeline/: __init__.py
stock_pipeline/core/: db.py  models.py  partitions.py  tags.py
stock_pipeline/core/destinations/: base.py  lean.py  local.py
stock_pipeline/core/sources/: base.py  csv_source.py  kite.py
stock_pipeline/daily_eod/: assets.py  jobs.py  sensor.py
stock_pipeline/daily_eq/: assets.py  jobs.py  sensor.py
stock_pipeline/daily_op/: assets.py  sensor.py
stock_pipeline/intraday_eq/: assets.py
stock_pipeline/intraday_op/: assets.py
