[project]
name = "stock-pipeline"
version = "0.1.0"
description = "Dagster-orchestrated stock market ETL pipeline"
requires-python = ">=3.11"
dependencies = [
  "dagster==1.9.5",
  "dagster-webserver==1.9.5",
  "pandas>=2.2",
  "pyarrow>=17.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "kiteconnect>=5.0",
]

[tool.dagster]
module_name = "stock_pipeline"

[tool.setuptools.packages.find]
include = ["stock_pipeline*"]

